<resources>
    <string name="app_name">ToDo</string>
    <string name="important">Important</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="deadline">Deadline</string>
    <string name="done">Done</string>
    <string name="task">Task</string>
    <string-array name="category">
        <item>Task</item>
    </string-array>
</resources>